============ Version 2.20.0

2007-09-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.0

2007-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (totem_cd_detect_type_with_url):
	Use the canonical device when giving the cdda MRL

2007-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-media.c: (totem_pl_parser_add_block):
	Don't leak the error

2007-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_url_valist):
	Remove some unneeded variables

2007-09-02  Christian Persch  <chpe@gnome.org>

	* src/Makefile.am: Fix non-srcdir builds. Bug #472955.

2007-09-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Don't call out to the
	viewer when it's not started yet

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_eject): Don't crash when eject
	is called from a remote interface and there's no MRL loaded
	(Closes: #434380)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Make sure the volume widget is disabled on
	startup so that the volume widget can't be popped up at startup,
	Fixes a critical warning leaving enter pressed on startup

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (on_movie_menu_select): Don't forget
	to reset ->drives_changed to avoid rebuilding the devices
	menu each time we open the menu

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (update_media_menu_items): Disable the Eject
	menu item, it's completely broken since we removed the mediadev
	property, but nobody tested it :/
	Proper fix will go in trunk

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (link_button_clicked_cb): Escape the URI
	before using it in a shell, otherwise the fragment ends up being
	a comment, and it's not being used

2007-08-27  Bastien Nocera  <hadess@hadess.net>
