@@ -249,8 +249,6 @@
       <child>
 	<object class="GtkVolumeButton" id="tcw_volume_button">
 	  <property name="visible">True</property>
-	  <signal name="button-press-event" handler="totem_fullscreen_vol_slider_pressed_cb"/>
-	  <signal name="button-release-event" handler="totem_fullscreen_vol_slider_released_cb"/>
 	</object>
 	<packing>
 	  <property name="padding">0</property>
